--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "5.2.0"
   },
   "devDependencies": {
+    "babel-eslint": "10.1.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-prettier": "3.3.1",
@@ -28,7 +29,7 @@
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.2.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
