--- a/package.json
+++ b/package.json
@@ -21,15 +21,12 @@
     "react-router-dom": "5.2.0"
   },
   "devDependencies": {
-    "babel-eslint": "10.1.0",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-react": "7.37.5",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.2.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
