--- a/package.json
+++ b/package.json
@@ -21,11 +21,21 @@
     "react-router-dom": "5.2.0"
   },
   "devDependencies": {
-    "eslint-plugin-react": "7.37.5",
+    "@babel/eslint-parser": "7.27.0",
+    "@babel/preset-react": "7.26.3",
+    "babel-eslint": "10.1.0",
+    "eslint": "8.2.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-prettier": "10.1.2",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-prettier": "5.2.6",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.3.0",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
-    "prettier": "2.2.1",
+    "prettier": "3.5.3",
     "react-scripts": "5.0.1"
   },
   "scripts": {
