--- a/package.json
+++ b/package.json
@@ -3,40 +3,42 @@
   "private": true,
   "version": "1.0.0",
   "engines": {
-    "node": "^10.13 || 12 || 14 || 15",
-    "npm": ">=6"
+    "node": ">=18.x",
+    "npm": ">=9"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/react": "11.2.5",
-    "@testing-library/user-event": "12.6.2",
-    "chalk": "4.1.0",
-    "history": "5.0.0",
-    "js-cookie": "3.0.0",
-    "msw": "0.12.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-icons": "4.2.0",
-    "react-loader-spinner": "4.0.0",
-    "react-router-dom": "5.2.0"
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "ajv": "8.12.0",
+    "ajv-keywords": "5.1.0",
+    "chalk": "^5.3.0",
+    "history": "^5.3.0",
+    "js-cookie": "^3.0.5",
+    "msw": "^2.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "7.27.0",
-    "@babel/preset-react": "7.26.3",
-    "babel-eslint": "10.1.0",
-    "eslint": "8.2.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-config-prettier": "10.1.2",
-    "eslint-plugin-import": "2.25.3",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-prettier": "5.2.6",
-    "eslint-plugin-react": "7.28.0",
-    "eslint-plugin-react-hooks": "4.3.0",
-    "husky": "4.3.8",
-    "lint-staged": "10.5.4",
-    "npm-run-all": "4.1.5",
-    "prettier": "3.5.3",
-    "react-scripts": "5.0.1"
+    "@babel/eslint-parser": "^7.24.0",
+    "@babel/preset-react": "^7.24.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.6.0",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,11 +50,11 @@
     "run-all": "npm-run-all --parallel test lint:fix"
   },
   "lint-staged": {
-    "*.js": [
-      "npm run lint:fix"
+    "*.{js,jsx}": [
+      "eslint --fix"
     ],
-    "*.{js, jsx, json, html, css}": [
-      "npm run format"
+    "*.{js,jsx,json,html,css}": [
+      "prettier --write"
     ]
   },
   "husky": {
