Update Netlify config: Node 18, build command, publish dir, SPA redirect

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,13 @@
+[build]
+  command = "npm run build"
+  publish = "build"
+
 [build.environment]
-  NODE_VERSION = "14"
-  NPM_VERSION = "6"
+  NODE_VERSION = "18"
+  NPM_VERSION = "9"
+
+[redirects]
+  # Redirect all requests to index.html for SPA routing (React Router)
+  from = "/*"
+  to = "/index.html"
+  status = 200
